# recepies

./: .gitignore  package.json
app/: globals.css  layout.tsx  page.module.css  page.tsx
app/components/card/: card.module.css
app/components/card-image/: card-image.module.css  card_image.tsx
app/components/footer/: footer.module.css  footer.tsx
app/components/header/: header.module.css  header.tsx  headerMobile.tsx
app/components/polygon-card/: polygon-card.module.css  polygon-card.tsx
backend/: README.md  main.py  pyproject.toml
backend/templates/: email.html
frontend/: README.md  package.json
frontend/app/: globals.css  page.module.css  page.tsx
frontend/app/components/card/: card.module.css  card.tsx
frontend/app/components/card-image/: card-image.module.css
frontend/app/components/carousel/: carousel.module.css  carousel.tsx
frontend/app/components/div-2-sides/: div2sides.module.css  div2sides.tsx
frontend/app/components/footer/: footer.module.css  footer.tsx
frontend/app/components/header/: header.module.css  header.tsx  headerMobile.tsx
frontend/app/components/polygon-card/: polygon-card.module.css  polygon-card.tsx
frontend/app/components/textfield/: textfield.module.css  textfield.tsx
frontend/app/contact/: contact.module.css  contactForm.tsx  page.tsx
frontend/app/guarantee/: guarantee.module.css  page.tsx
frontend/app/products/: page.tsx
frontend/app/products/[product]/: error.tsx  page.tsx  product.module.css
frontend/app/shared/: shared.tsx
frontend/app/who-we-are/: page.tsx  who.module.css
